k2s/test/e2e/addons/ingress/nginx/workloads/ingress-nginx-test-linux-albums.yaml
# SPDX-FileCopyrightText: © 2024 Siemens Healthineers AG
#
# SPDX-License-Identifier: MIT

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: albums-linux1
  namespace: ingress-nginx-test
spec:
  selector:
    matchLabels:
      app: albums-linux1
  replicas: 1
  template:
    metadata:
      labels:
        app: albums-linux1
    spec:
      containers:
        - name: albums-linux1
          image: shsk2s.azurecr.io/example.albums-golang-linux:v1.0.0
          ports:
            - containerPort: 80
          env:
            - name: PORT
              value: '80'
            - name: RESOURCE
              value: 'albums-linux1'
      nodeSelector:
        kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: albums-linux1
  namespace: ingress-nginx-test
spec:
  selector:
    app: albums-linux1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: 172.21.0.220
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: albums-linux1
  namespace: ingress-nginx-test
spec:
  rules:
    - host: k2s.cluster.local
      http:
        paths:
          - backend:
              service:
                name: albums-linux1
                port:
                  number: 80
            pathType: Prefix
            path: /albums-linux1
