k2s/test/e2e/addons/ingress/nginx/workloads/ingress-nginx-test-namespace.yaml
# SPDX-FileCopyrightText: © 2024 Siemens Healthineers AG
#
# SPDX-License-Identifier: MIT

apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx-test
