k2s/test/e2e/addons/ingress/nginx/workloads/ingress-nginx-test-secret.yaml
# SPDX-FileCopyrightText: © 2024 Siemens Healthineers AG
#
# SPDX-License-Identifier: MIT

apiVersion: v1
kind: Secret
metadata:
  name: regcred
  namespace: ingress-nginx-test
data:
  .dockerconfigjson: ewogICAgICAgICJhdXRocyI6IHsKICAgICAgICAgICAgICAgICJzeW5nb3ByZWRldmVsb3BtZW50aW1hZ2VzLmF6dXJlY3IuaW8iOiB7CiAgICAgICAgICAgICAgICAgICAgICAgICJ1c2VybmFtZSI6ICJQcmVEZXZQdWxsIiwKICAgICAgICAgICAgICAgICAgICAgICAgInBhc3N3b3JkIjogIndtU0VFRHZGb3BBb1JVc0hoQmd2MnFVeVErclVjWmJZTXY1MUJSQk5BcitBQ1JBWmc5bWYiCiAgICAgICAgICAgICAgICB9CiAgICAgICAgfQp9Cg==
type: kubernetes.io/dockerconfigjson
