k2s/test/e2e/addons/ingress/nginx/workloads/kustomization.yaml
# SPDX-FileCopyrightText: © 2024 Siemens Healthineers AG
#
# SPDX-License-Identifier: MIT

apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
resources:
- ingress-nginx-test-namespace.yaml
- ingress-nginx-test-linux-albums.yaml
